@@ -248,7 +248,6 @@ C_LIB := \
 	stdlib_setjmp.o \
 	stdlib_set_errno.o \
 	stdlib_set_process_window.o \
-	stdlib_shared_libs.o \
 	stdlib_shell_escape.o \
 	stdlib_showerror.o \
 	stdlib_srand.o \
